--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://drakejoshua.github.io/BMI-Calculator/",
+  "homepage": "https://drakejoshua.github.io/BMI-Calculator",
   "name": "bmiindexcalculator",
   "private": true,
   "version": "0.0.0",
